diesel_compile_tests/tests/fail/derive/bad_insertable.stderr
error[E0277]: the trait bound `std::string::String: diesel::Expression` is not satisfied
  --> tests/fail/derive/bad_insertable.rs:12:5
   |
12 |     id: String,
   |     ^^ the trait `diesel::Expression` is not implemented for `std::string::String`
   |
   = note: required because of the requirements on the impl of `AsExpression<diesel::sql_types::Integer>` for `std::string::String`

error[E0277]: the trait bound `i32: diesel::Expression` is not satisfied
  --> tests/fail/derive/bad_insertable.rs:13:5
   |
13 |     name: i32,
   |     ^^^^ the trait `diesel::Expression` is not implemented for `i32`
   |
   = note: required because of the requirements on the impl of `AsExpression<diesel::sql_types::Text>` for `i32`

error[E0277]: the trait bound `std::string::String: diesel::Expression` is not satisfied
  --> tests/fail/derive/bad_insertable.rs:12:5
   |
12 |     id: String,
   |     ^^ the trait `diesel::Expression` is not implemented for `std::string::String`
   |
   = note: required because of the requirements on the impl of `diesel::Expression` for `&'insert std::string::String`
   = note: required because of the requirements on the impl of `AsExpression<diesel::sql_types::Integer>` for `&'insert std::string::String`

error[E0277]: the trait bound `i32: diesel::Expression` is not satisfied
  --> tests/fail/derive/bad_insertable.rs:13:5
   |
13 |     name: i32,
   |     ^^^^ the trait `diesel::Expression` is not implemented for `i32`
   |
   = note: required because of the requirements on the impl of `diesel::Expression` for `&'insert i32`
   = note: required because of the requirements on the impl of `AsExpression<diesel::sql_types::Text>` for `&'insert i32`
